--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -49,6 +49,7 @@ footer {
         <li><a href="/customization">Customization</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/about">About Us</a></li>
+        <li><%= link_to "History", history_path() %></li>
       </ul>
     </nav>
   </header>
