--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -45,7 +45,7 @@ footer {
       <ul>
         <li><a href="/">Home</a></li>
         <li><%= link_to "Listings", listings_path() %></li>
-        <li><a href="/guide">Guide</a></li>
+        <li><%= link_to "Guide", guide_path() %></li>
         <li><a href="/customization">Customization</a></li>
         <li><%= link_to "Gallery", gallery_path() %></li>
         <li><a href="/about">About Us</a></li>
