--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
 <body>
   <header class="navbar">
     <div class="navbar-logo">
-      <%= link_to image_tag('logo.jpg', alt: 'Logo', height: '50') %>
+      <%= link_to image_tag('logo.jpg', alt: 'Logo', height: '50'), root_path %>
     </div>
 
     <nav class="navbar-nav">
