US17 view platform purpouse

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -48,7 +48,7 @@ footer {
         <li><a href="/guide">Guide</a></li>
         <li><a href="/customization">Customization</a></li>
         <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/about">About Us</a></li>
+        <li><%= link_to "about us", aboutus_path() %></li>
       </ul>
     </nav>
   </header>
