US-15 Display Gallery

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -47,7 +47,7 @@ footer {
         <li><%= link_to "Listings", listings_path() %></li>
         <li><a href="/guide">Guide</a></li>
         <li><a href="/customization">Customization</a></li>
-        <li><a href="/gallery">Gallery</a></li>
+        <li><%= link_to "Gallery", gallery_path() %></li>
         <li><a href="/about">About Us</a></li>
       </ul>
     </nav>
