--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
     <nav class="navbar-nav">
       <% if user_signed_in? %>
         <!-- Cart icon and Sign Out button only appear for signed-in users -->
-          <%= link_to image_tag('cart.jpg', alt: 'Cart', height: '24'), class: 'cart-icon' %>
+          <%= link_to image_tag('cart.jpg', alt: 'Cart', height: '24'),cart_path, class: 'cart-icon' %>
         <div class="sign-out">
           <span class="nav-item">Hi, <%= current_user.email %></span>
            <%= link_to image_tag('profile.jpg', alt: 'Profile', height: '24') %>
