--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
 <body>
   <header class="navbar">
     <div class="navbar-logo">
-      <%= link_to image_tag('logo.jpg', alt: 'Logo', height: '50') %>
+      <%= link_to image_tag('logo.jpg', alt: 'Logo', height: '50'), home_path %>
     </div>
 
     <nav class="navbar-nav">
@@ -88,3 +88,4 @@
   </main>
 </body>
 </html>
+
