--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -20,10 +20,21 @@
 <div class="aboutus">
   <h1>About Us</h1>
   <p>
-    Overview of the Teapot Birdhouses platform, including its history and mission.
-    It provides essential details about the platform's origins and a clear explanation
-    of its commitment to bird conservation and fostering a vibrant community of bird
-    enthusiasts.
+   Teapot Birdhouses is your premier destination for teapot-themed birdhouses, expert birdwatching insights, and a vibrant bird enthusiast community.
+   Discover one-of-a-kind designs, find the perfect birdhouse for your garden, and become a part of our thriving community today.
+   Elevate your birdwatching experience with us!
+   </p>
+
+
+   <p>
+   At Teapot Birdhouses, we blend artistry and functionality to create birdhouses that are as beautiful as they are inviting.
+   Our mission is to bring the joys of birdwatching closer to your home, enhancing your connection with the avian world.
+   Join us in celebrating nature's wonders, one teapot birdhouse at a time.
+   </p>
+
+   <p>
+   With a commitment to craftsmanship and a passion for all things avian, we invite you to explore our world of teapot birdhouses and share in the wonder of birdwatching right outside your window.
+   Welcome to Teapot Birdhouses, where every birdhouse tells a unique story.
   </p>
   
   <h2>Contact Us</h2>
