--- a/app/views/birdhouse/gallery.html.erb
+++ b/app/views/birdhouse/gallery.html.erb
@@ -7,6 +7,7 @@
     <%= image_tag "birdhouse#{birdhouse.id}.jpg", class: 'birdhouse-image' %>
     <p><%= birdhouse.Style %></p>
     <p>Likes: <%= birdhouse.likes %></p>
+    <%= button_to 'Upvote', upvote_birdhouse_path(birdhouse), method: :put, class: 'upvote-button'%>
     
   </div>
 <% end %>
