US11 Access quiz

--- a/app/views/birdhouse/gallery.html.erb
+++ b/app/views/birdhouse/gallery.html.erb
@@ -31,6 +31,10 @@
   .upvote-button {
     /* ... other styles ... */
   }
+  a {
+    color: white;
+    text-decoration: none;
+  }
 
   /* ... other styles ... */
 </style>
