--- a/app/views/birdhouse/listings.html.erb
+++ b/app/views/birdhouse/listings.html.erb
@@ -49,6 +49,10 @@
     .select-button:hover, .apply-filters:hover {
       filter: brightness(90%);
     }
+    a {
+      color: white;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
