--- a/app/views/birdhouse/listings_show.html.erb
+++ b/app/views/birdhouse/listings_show.html.erb
@@ -10,12 +10,16 @@
       background-color: black;
     }
     .navbar {
-      background-color: black;
+      
       padding: 10px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    a {
+      color: white;
+      text-decoration: none;
     }
     .navbar-brand {
       display: flex;
