--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,54 +1,45 @@
 <html>
 <head>
-<body>
 <style>
-// Example styles
-.quiz-form {
-  // Style your form to match the wireframe
+a {
+  color: white;
+  text-decoration: none;
+}
+body{
+  background: #FFFDD0;
+  color: black;
 }
 
-.quiz-form input, .quiz-form select {
-  // Input styles
-}
-
-.quiz-form label {
-  // Label styles
-}
-
-.quiz-form .submit-button {
-  // Submit button styles
-}
 </style>
+</head>
+<body>
 
-
-<%= form_with(url: create_quiz_path, method: :post, local: true) do |form| %>
+<%= bootstrap_form_with model: @quiz, method: :post, url: create_quiz_path(@quiz), data: {turbo:false} do |form| %>
   <div>
-    <%= form.label :city, 'Location Details - City' %>
+    <!--<%= form.label :city, 'Location Details - City' %>-->
     <%= form.text_field :city %>
   </div>
   
   <div>
-    <%= form.label :temperature, 'Temperature' %>
+    <!--<%= form.label :temperature, 'Temperature' %>-->
     <%= form.select :temperature, ['High', 'Average', 'Low'] %>
   </div>
   
   <div>
-    <%= form.label :number_of_birds, 'Number of birds' %>
+    <!--<%= form.label :number_of_birds, 'Number of birds' %>-->
     <%= form.number_field :number_of_birds %>
   </div>
   
   <div>
-    <%= form.label :number_of_species, 'Number of species' %>
+    <!--<%= form.label :number_of_species, 'Number of species' %>-->
     <%= form.number_field :number_of_species %>
   </div>
   
   <div>
-    <%= form.label :species, 'What are the species?' %>
+    <!--<%= form.label :species, 'What are the species?' %>-->
     <%= form.text_field :species %>
   </div>
-  
-  <%= form.submit "Finish quiz" %>
-<% end %>
+  <%= form.submit "Finish quiz"%>
+<%end%>
 </body>
-</head>
 </html>
