--- a/app/views/birdhouse/listings_show.html.erb
+++ b/app/views/birdhouse/listings_show.html.erb
@@ -103,18 +103,20 @@
     <p><strong>Size:</strong> <%= @birdhouse.Size %></p>
     <p><strong>Artistic Detail:</strong> <%= @birdhouse.Artistic_detail %></p>
     <p class="price">$<%= '%.2f' % @birdhouse.Price %></p>
-    <%= link_to 'Buy now', '#', class: 'button buy' %>
+    
+    <%= link_to 'Buy now',
+            buy_now_path(id: @birdhouse.id),
+            method: :post,
+            class: 'button buy' %>
   
-    <!-- app/views/home/listings_show.html.erb -->
-
     
     <%= button_to 'Add to Cart', 
               add_to_cart_path(id: @birdhouse.id), 
               method: :post, 
               class: 'button add-to-cart', 
               id: 'add-to-cart-button',
-              data: { turbo: "false", disable_with: "Adding..." },
-              onclick: "this.innerText='Added'; this.disabled=true; this.classList.add('disabled-button');" %>
+              data: { turbo: "false" } %>
+
 
 
   </div>
