--- a/app/views/cart/cart.html.erb
+++ b/app/views/cart/cart.html.erb
@@ -1,37 +1,33 @@
 <!-- app/views/cart/cart.html.erb -->
 <h1>Your Shopping Cart</h1>
 
+<style>
+.birdhouse-image {
+  max-width: 100%;
+  height: 200px; /* Set a fixed height for all images */
+  object-fit: cover; /* Maintain aspect ratio and cover the container */
+  border-bottom: 1px solid #eee;
+  margin-bottom: 20px; }
+</style>
+
 <% if @cart.cart_items.any? %>
   <table>
     <thead>
       <tr>
         <th>Item</th>
-        <th>Quantity</th>
-        <th>Unit Price</th>
-        <th>Total Price</th>
+
         <th></th> <!-- For remove button -->
       </tr>
     </thead>
     <tbody>
       <% @cart.cart_items.each do |cart_item| %>
         <tr>
-          <td><%= cart_item.Birdhouse.Style %></td>
+          <td><%= cart_item.birdhouse.Style %></td>
+          <%= image_tag "birdhouse#{cart_item.birdhouse.id}.jpg", class: 'birdhouse-image' %>
           <td><%= cart_item.quantity %></td>
-          <td><%= number_to_currency(cart_item.Birdhouse.Price) %></td>
-          <td><%= number_to_currency(cart_item.quantity * cart_item.Birdhouse.Price) %></td>
-          <td>
-            <%= link_to 'Remove', cart_item_path(cart_item), method: :delete, data: { confirm: 'Are you sure?' } %>
-          </td>
         </tr>
       <% end %>
     </tbody>
-  </table>
-
-  <div class="total-price">
-    <p><strong>Total Price: </strong><%= number_to_currency(@cart.total_price) %></p>
-  </div>
-
-  <%= link_to 'Checkout', new_order_path, class: 'btn btn-primary' %>
 <% else %>
   <p>Your cart is currently empty.</p>
 <% end %>
