--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,7 @@
       <% if user_signed_in? %>
         <div class="user-info">
           <!-- Cart icon -->
-          <%= link_to image_tag('cart.jpg', alt: 'Cart', height: '24'), class: 'nav-link' %>
+          <%= link_to image_tag('cart.jpg', alt: 'Cart', height: '24'), cart_path, class: 'nav-link' %>
           <!-- Profile image -->
           <%= link_to image_tag('profile.jpg', alt: 'Profile', height: '24'), class: 'nav-link' %>
           <span>Hi, <%= current_user.email %></span>
