Added CSS styling to home and listings page.

--- a/app/views/home/guide.html.erb
+++ b/app/views/home/guide.html.erb
@@ -61,5 +61,10 @@ Welcome to our Birdhouse Compatibility Guide! This fun and informative quiz is d
 <p>So, are you ready to find your ideal birdhouse? Let's get started with the quiz! 🐦🏡✨
 </p>
 <%= link_to 'Start Quiz', new_quiz_path, class: 'button' %>
+<p></p>
+
+<p>Participate in Q/A regarding your birdhouse queries here</p>
+<%= link_to 'Q/A session', community_path, class: 'button' %>
+
 </head>
 </html>
