--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -33,14 +33,11 @@ a {
   text-decoration: none;
 }
 
-/* Footer styling */
-footer {
-  margin-top: 20px;
-}
+
 </style>
 </head>
 <body>
-  
+  <div style = "background-image: url('/assets/homebg.png');height: 605px;background-position: center;background-repeat: no-repeat;background-size: cover; ">
 
   <section class="intro">
     <h1>Teapot Birdhouses</h1>
@@ -51,10 +48,6 @@ footer {
     <%= button_to 'Click to manage Inventory', '#' %>
   </section>
 
- 
-
-  <footer>
-    <!-- Your footer here -->
-  </footer>
+ </div>
 </body>
 </html>
