US06 Review Purchase History

--- a/app/views/birdhouse/add.html.erb
+++ b/app/views/birdhouse/add.html.erb
@@ -7,6 +7,12 @@
 <style>
   body {
     font-family: Arial, sans-serif;
+    background: white;
+    color: black;
+  }
+  a{
+      color: white;
+      text-decoration: none;
   }
   .container {
     width: 80%;
