--- a/app/views/birdhouse/gallery.html.erb
+++ b/app/views/birdhouse/gallery.html.erb
@@ -36,6 +36,10 @@
     color: white;
     text-decoration: none;
   }
+  body{
+      background: white;
+      color: black;
+  }
 
   /* ... other styles ... */
 </style>
