--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -13,6 +13,14 @@
 .about-container p {
   font-size: 14px;
 }
+a{
+  color: white;
+  text-decoration: none;
+}
+body{
+  background: white;
+  color: black;
+}
 </style>
 </head>
 
