--- a/app/views/birdhouse/listings.html.erb
+++ b/app/views/birdhouse/listings.html.erb
@@ -8,7 +8,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: black;
+      background: white;
+      color: black;
     }
     .container {
       display: flex;
