--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -7,6 +7,8 @@
 <style>
   body {
     font-family: Arial, sans-serif;
+    background: white;
+    color: black;
   }
   .container {
     width: 80%;
@@ -17,6 +19,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
+  }
+  a{
+      color: white;
+      text-decoration: none;
   }
   .logo {
     font-size: 24px;
