--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,8 @@
         <li><%= link_to "Guide", guide_path %></li>
         <li><a href="/customization">Customization</a></li>
         <li><%= link_to "Gallery", gallery_path %></li>
-        <li><a href="/about">About Us</a></li>
+        <li><%= link_to "Aboutus", aboutus_path %></li>
+        
       </ul>
     </nav>
     <nav>  
