--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -13,11 +13,18 @@
 .about-container p {
   font-size: 14px;
 }
+a{
+  color: white;
+  text-decoration: none;
+}
+body{
+  background: white;
+  color: black;
+}
 </style>
 </head>
 
 <body>
-<div class="aboutus">
   <h1>About Us</h1>
   <p>
    Teapot Birdhouses is your premier destination for teapot-themed birdhouses, expert birdwatching insights, and a vibrant bird enthusiast community.
@@ -40,6 +47,6 @@
   <h2>Contact Us</h2>
   <p>Phone: +1-901-(123)-4567</p>
   <p>Email: teapotbirdhouse@email.com</p>
-</div>
+
 </body>
 </html>
