--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,39 @@ main {
 .alert-dismissible {
   padding-left: $alert-dismissible-padding-r;
 }
+
+a{
+  color: white;
+  text-decoration: none;
+}
+
+body{
+  background: white;
+  color: black;
+}
+
+input[type="email"], input[type="password"] {
+  background-color: white; 
+  color: black; 
+  border: 1px solid #444;
+  padding: 8px; 
+  margin-bottom: 8px;
+}
+
+input[type="checkbox"] {
+  accent-color: black; 
+  background: white;
+}
+
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: black; 
+  border: none; 
+  padding: 10px 20px; 
+  cursor: pointer; 
+}
+
+.flash.alert{
+  color: black;
+  align-content: center;
+}
