--- a/app/views/birdhouse/gallery.html.erb
+++ b/app/views/birdhouse/gallery.html.erb
@@ -30,6 +30,12 @@
   }
 
   .upvote-button {
+    background-color: #4CAF50; 
+    color: white;
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer;
     /* ... other styles ... */
   }
   a {
