--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,14 @@
       display: flex;
       align-items: center;
     }
+    .nav-button{
+      background-color: #4CAF50; 
+      color: white;
+      padding: 10px 20px; 
+      border: none; 
+      border-radius: 5px; 
+      cursor: pointer;
+    }
     .nav-link:hover {
       text-decoration: underline;
       height: 24;
@@ -143,20 +151,8 @@
           </div>
         </div>
           <span>Hi, <%= current_user.email %></span>
-          <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link', data: { turbo: false } %>
+          <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-button', data: { turbo: false } %>
         </div>
-        <!--<div class="dropdown">
-          <div class="dropbtn">
-            <%= image_tag('profile.jpg', alt: 'Profile', height: '24') %>
-          </div>
-          <div class="dropdown-content">
-            <%= link_to 'History', history_path %>
-            <%= link_to 'Manage account', '#' %>
-            <%= link_to 'Settings', '#' %>
-            
-            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link', data: { turbo: false } %>
-          </div>
-        </div>-->
       <% else %>
         <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
         <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
