--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -10,12 +10,20 @@
       color: black;
     }
     .birdhouse-image {
-  max-width: 100%;
-  height: 200px; /* Set a fixed height for all images */
-  object-fit: cover; /* Maintain aspect ratio and cover the container */
-  border-bottom: 1px solid #eee;
-  margin-bottom: 20px;
-}
+      max-width: 100%;
+      height: 200px; /* Set a fixed height for all images */
+      object-fit: cover; /* Maintain aspect ratio and cover the container */
+      border-bottom: 1px solid #eee;
+      margin-bottom: 20px;
+    }
+    .review-button{
+      background-color: #4CAF50; 
+      color: white;
+      padding: 10px 20px; 
+      border: none; 
+      border-radius: 5px; 
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -32,5 +40,6 @@
     <!-- Other order details -->
   </div>
 <% end %>
+<%= button_to 'Add Review', '#', class: 'review-button' %>
 </body>
 </html>
