--- a/app/views/birdhouse/listings.html.erb
+++ b/app/views/birdhouse/listings.html.erb
@@ -38,7 +38,7 @@
     .select-button, .apply-filters {
       text-decoration: none;
       color: #fff;
-      background-color: #007bff;
+      background-color: #4CAF50;
       padding: 10px 15px;
       border-radius: 5px;
       margin-top: 10px;
