--- a/app/views/home/community.html.erb
+++ b/app/views/home/community.html.erb
@@ -18,7 +18,7 @@
 
 
 .button, .submit-reply input[type="submit"] {
-  background-color: #007bff; 
+  background-color: #4CAF50; 
   color: #ffffff;
   border: none;
   padding: 8px 12px;
@@ -27,7 +27,7 @@
 }
 
 .button:hover, .submit-reply input[type="submit"]:hover {
-  background-color: #0056b3; 
+  background-color: #4CAF50; 
 }
 
 .community-page {
@@ -41,7 +41,10 @@
 
 .ask-question textarea, .submit-reply textarea {
   height: 50px; 
+  background: white;
+  color: black;
   margin-bottom: 10px;
+  padding: 10px;
 }
 
 .reply {
