--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -40,6 +40,6 @@
     <!-- Other order details -->
   </div>
 <% end %>
-<%= button_to 'Add Review', '#', class: 'review-button' %>
+<%= link_to 'Add Review', '#', class: 'review-button' %>
 </body>
 </html>
