--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,47 +1,95 @@
 <html>
     <head>
-        <h3>Complete Purchase</h3>
         <style>
-            .field{
+            body{
                 background: white;
+                color: black;
             }
+            .container {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+            }
+            .form-container {
+                border: 1px solid #ccc;
+                padding: 20px;
+                border-radius: 5px;
+            }
+            .payment-details {
+                display: flex;
+                gap: 10px;
+            }
+            .payment-details > .field {
+                display: flex;
+                flex-direction: column;
+            }
+            .container.form-container.h3{
+                text-align: 'center';
+            }
+            .number_field{
+                -webkit-appearance: none; 
+                -moz-appearance: textfield;
+            }
+            input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+            .expiry-cvv-container {
+                display: flex;
+                justify-content: space-between;
+            }
+            .expiry-cvv-container > div {
+                display: flex;
+                flex-direction: column;
+                margin-right: 10px; /* Adjust spacing between the fields */
+            }
+            .expiry-cvv-container > div:last-child {
+                margin-right: 0;
+            }
+            
         </style>
     </head>
     <body>
-        <%= form_for @order, url: orders_path do |f| %>
-        <!-- Shipping Information Fields -->
-        <div class="field">
-            <%= f.label :shipping_address %>
-            <%= f.text_area :shipping_address, required: true, style: 'background-color: white; color: black' %>
-        </div>
+        <div class = "container">
+            <div class = "form-container">
+                <h3>Complete Purchase</h3>
+                <%= bootstrap_form_with model: @order, method: :post, url: create_order_path(@order), data: {turbo:false} do |form| %>
+                    <!-- Shipping Information Fields -->
+                    <!--<div class="field">
+                        <%= form.label :shipping_address %>
+                        <%= form.text_area :shipping_address, required: true, style: 'background-color: white; color: black' %>
+                    </div>-->
+                    <div class="field">
+                        <%= form.text_area :shipping_address, placeholder: 'Shipping Address', required: true, style: 'width: 500px' %>
+                    </div>
 
-        <div class="field">
-            <%= f.label :total_cost %>
-            <%= f.number_field :total_cost, value: 20.00, required: true, readonly: true, style: 'background-color: white; color: black ' %>
-        </div>
-        <!-- Simulated Payment Information -->
-        <div class="field">
-            <%= f.label :card_number, "Credit Card Number" %>
-            <%= f.text_field :card_number, placeholder: '1234 5678 9012 3456', style: 'background-color: white; color: black'  %>
-        </div>
+                    <div class="field">
+                        <%= form.number_field :total_cost, value: 20.00, required: true, readonly: true, style: 'width: 100px' %>
+                    </div>
+                    <p>PAYMENT DETAILS</p>
+                    <!-- Simulated Payment Information -->
+                    <div class="field">
+                        <%= form.text_field :cardholder_name, placeholder: 'Name', required: true, style: 'width: 400px' %>
+                    </div>
+                    <div class="expiry-cvv-container">
+                        <div class="field">
+                            <%= form.number_field :card_number, placeholder: 'XXXX XXXX XXXX XXXX', required: true,  pattern: "\\d*", title: "Numbers only", style: 'width: 200px;'  %>
+                        </div>
 
-        <div class="field">
-            <%= f.label :card_expiry, "Expiry Date" %>
-            <%= f.text_field :card_expiry, placeholder: 'MM/YY', style: 'background-color: white; color: black'  %>
-        </div>
+                        <div class="field">
+                            <%= form.text_field :card_expiry, placeholder: 'MM/YY', required: true, style: 'width: 85px'  %>
+                        </div>
 
-        <div class="field">
-            <%= f.label :card_cvv, "CVV" %>
-            <%= f.text_field :card_cvv, placeholder: '123', style: 'background-color: white; color: black'  %>
+                        <div class="field">
+                            <%= form.number_field :card_cvv, placeholder: 'XXXX', required: true, style: 'width: 70px;'  %>
+                        </div>
+                    </div>
+                    <%= form.submit "Place Order", id: "submit-button" %>
+                <% end %>
+            </div>
         </div>
-
-        <div class="field">
-            <%= f.label :cardholder_name, "Cardholder Name" %>
-            <%= f.text_field :cardholder_name, placeholder: 'Name', style: 'background-color: white; color: black'  %>
-        </div>
-
-        <%= f.submit "Place Order", id: "submit-button" %>
-        <% end %>
     </body>
 </html>
 
