--- a/app/views/birdhouse/listings.html.erb
+++ b/app/views/birdhouse/listings.html.erb
@@ -50,6 +50,14 @@
     .select-button:hover, .apply-filters:hover {
       filter: brightness(90%);
     }
+    .inventory-button{
+      background-color: #4CAF50; 
+      color: white;
+      padding: 10px 20px; 
+      border: none; 
+      border-radius: 5px; 
+      cursor: pointer;
+    }
     .birdhouse-image {
   max-width: 100%;
   height: 200px; /* Set a fixed height for all images */
@@ -77,6 +85,8 @@
     </div>
   <% end %>
 </div>
-
+<% if current_user.role? %>
+  <%= link_to 'Click to manage Inventory', inventory_path, class: 'inventory-button' %>
+<%end%>
 </body>
 </html>
