--- a/app/views/birdhouse/listings_show.html.erb
+++ b/app/views/birdhouse/listings_show.html.erb
@@ -108,21 +108,20 @@
     <p><strong>Size:</strong> <%= @birdhouse.Size %></p>
     <p><strong>Artistic Detail:</strong> <%= @birdhouse.Artistic_detail %></p>
     <p class="price">$<%= '%.2f' % @birdhouse.Price %></p>
+    <% if !current_user.role? %>
+      <%= link_to 'Buy now',
+              buy_now_path(id: @birdhouse.id),
+              method: :post,
+              class: 'button buy' %>
     
-    <%= link_to 'Buy now',
-            buy_now_path(id: @birdhouse.id),
-            method: :post,
-            class: 'button buy' %>
-  
-    
-    <%= button_to 'Add to Cart', 
-              add_to_cart_path(id: @birdhouse.id), 
-              method: :post, 
-              class: 'button add-to-cart', 
-              id: 'add-to-cart-button',
-              data: { turbo: "false" } %>
-
-
+      
+      <%= button_to 'Add to Cart', 
+                add_to_cart_path(id: @birdhouse.id), 
+                method: :post, 
+                class: 'button add-to-cart', 
+                id: 'add-to-cart-button',
+                data: { turbo: "false" } %>
+    <% end %>
 
   </div>
 </div>
