--- a/app/views/cart/cart.html.erb
+++ b/app/views/cart/cart.html.erb
@@ -22,7 +22,7 @@
     <tbody>
       <% @cart.cart_items.each do |cart_item| %>
         <tr>
-          <td><%= cart_item.birdhouse.Style %></td>
+          <td><%= cart_item.birdhouse.style %></td>
           <%= image_tag "birdhouse#{cart_item.birdhouse.id}.jpg", class: 'birdhouse-image' %>
           <td><%= cart_item.quantity %></td>
         </tr>
