--- a/app/views/home/guide.html.erb
+++ b/app/views/home/guide.html.erb
@@ -26,7 +26,7 @@ nav ul li {
 }
 
 .button {
-  /* Styles for button */
+  /* styles for button */
   padding: 10px 20px;
   background-color: #4CAF50; 
   color: white;
