--- a/app/views/inventory/show.html.erb
+++ b/app/views/inventory/show.html.erb
@@ -59,7 +59,7 @@
       <%= image_tag "birdhouse#{birdhouse.id}.jpg", class: 'birdhouse-image' %>
       <div class="birdhouse-details">
         
-        <p class="price">$<%= '%.2f' % birdhouse.Price %></p>
+        <p class="price">$<%= '%.2f' % birdhouse.price %></p>
         <%= link_to "Select", listings_show_path(birdhouse), class: 'select-button' %>
       </div>
     </div>
