--- a/app/views/birdhouse/add.html.erb
+++ b/app/views/birdhouse/add.html.erb
@@ -79,7 +79,7 @@
           <p><strong>material:</strong> Ceramic</p>
           <p><strong>color:</strong> Blue</p>
           <p><strong>style:</strong> Vintage</p>
-          <p><strong>Roof design:</strong> Classic Teapot Lid</p>
+          <p><strong>roof design:</strong> Classic Teapot Lid</p>
           <p><strong>size:</strong> M</p>
           <p><strong>artistic detail:</strong> Hand-painted floral design</p>
           <p><strong>price:</strong> $49.99</p>
