--- a/app/views/birdhouse/listings.html.erb
+++ b/app/views/birdhouse/listings.html.erb
@@ -90,8 +90,8 @@
     </div>
 
     <div class="form-group">
-      <%= label_tag :roof_design, 'Roof design:' %>
-      <%= select_tag :roof_design, options_for_select(['Classic Teapot Lid', 'Sleek Round Lid', 'Pitched Barn Roof', 'Smooth Dome Lid'], params[:roof_design]), include_blank: true %>
+      <%= label_tag :roof_design, 'roof design:' %>
+      <%= select_tag :roof_design, options_for_select(['Classic Teapot Lid', 'Sleek Round Lid', 'Pitched Barn roof', 'Smooth Dome Lid'], params[:roof_design]), include_blank: true %>
     </div>
 
     <div class="form-group">
