--- a/app/views/birdhouse/listings_show.html.erb
+++ b/app/views/birdhouse/listings_show.html.erb
@@ -108,7 +108,7 @@
     <p><strong>size:</strong> <%= @birdhouse.size %></p>
     <p><strong>artistic Detail:</strong> <%= @birdhouse.artistic_details %></p>
     <p class="price">$<%= '%.2f' % @birdhouse.price %></p>
-    
+    <% if !current_user.role?%>
     <%= link_to 'Buy now',
             buy_now_path(id: @birdhouse.id),
             method: :post,
@@ -121,6 +121,7 @@
               class: 'button add-to-cart', 
               id: 'add-to-cart-button',
               data: { turbo: "false" } %>
+    <% end %>
 
 
 
